LU-13389 tgt: not rollback obsolete rq

Restoring old pre-LU-11444 behavior in
last_rcvd/reply_data update, do not generate
a error for obsolete requests. Othewise tx_end
tries to rollback the operation and does it partially
leaving inodes unattached and changelog records not cleared;
Fixing reply_data slot leak on error.

Fixes: 23773b3 ("LU-11444 ptlrpc: resend may corrupt the data")
HPE-bug-id: LUS-8590
Signed-off-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Change-Id: I76c2de7b820da0239ce2f0a9d17b7dedadc0519b
Reviewed-on: https://review.whamcloud.com/38221
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andriy Skulysh <c17819@cray.com>
Reviewed-by: Alexander Boyko <alexander.boyko@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>